fixed gap between img and section_about_div

--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -72,7 +72,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    gap: 65px;
+    gap: 100px;
 }
 .section_about_title{
     font-size: 4rem;
